fix: remove unexpected style to prevent scrollbar-x

--- a/assets/scss/pages/_service.scss
+++ b/assets/scss/pages/_service.scss
@@ -56,10 +56,6 @@
   width: 300px;
 }
 
-.consult-card-min-width {
-  min-width: 300px;
-}
-
 .bg-subscribe {
   background: url(/assets/images/service/subscribe-3.svg) no-repeat;
   background-position: top right;
